--- a/index.html
+++ b/index.html
@@ -1168,7 +1168,7 @@ button[type="submit"],
     ></textarea>
 
     <div class="button-group" style="display: flex; flex-direction: row; align-items: center;">
-      <button id="submit-button-add-NFT-for-model" class="toolbar-column-btns" style="color: black;">Add
+      <button id="submit-button-add-NFT-for-model" class="toolbar-column-btns">Add
       </button>
       <button id="submit-button-remove-NFT-for-model" class="toolbar-column-btns" style="margin-left: 8vw;">Remove
       </button>
@@ -1181,7 +1181,7 @@ button[type="submit"],
     ></textarea>
 
     <div class="button-group" style="display: flex; flex-direction: row; align-items: center;">
-      <button id="submit-button-add-scale-for-model" class="toolbar-column-btns" style="color: black;">Add
+      <button id="submit-button-add-scale-for-model" class="toolbar-column-btns">Add
       </button>
       <button id="submit-button-remove-scale-for-model" class="toolbar-column-btns" style="margin-left: 8vw;">Remove
       </button>
@@ -1195,7 +1195,7 @@ button[type="submit"],
     ></textarea>
 
     <div class="button-group" style="display: flex; flex-direction: row; align-items: center;">
-      <button id="submit-button-add-topic-chat" class="toolbar-column-btns" style="color: black;">Add
+      <button id="submit-button-add-topic-chat" class="toolbar-column-btns">Add
       </button>
       <button id="submit-button-remove-topic-chat" class="toolbar-column-btns" style="margin-left: 8vw;">Remove
       </button>
