--- a/index.html
+++ b/index.html
@@ -3517,8 +3517,8 @@ const randomLongitude = (Math.random() * 360) - 180; // Random longitude between
 const map = new maplibregl.Map({
   container: "map",
   style: "https://tiles.openfreemap.org/styles/liberty",
-  center: [randomLongitude, randomLatitude], // Use random coordinates
-  zoom: 0,
+  center: [-172, -19],
+  zoom: 3,
   pitch: 0,
   bearing: 0,
   maxPitch: 75,
